Breakpoints and icons

--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
                     <h2>numbers</h2>
                   </div>
                   <div class="icons">
-                    <img src="img/Work.svg" alt="Jobb-ikon">
-                    <p><span>nine</span> workplaces</p>
+                    <img src="img/Love.svg" alt="Ikon tillsammans">
+                    <p><span>ten</span> years of love</p>
                   </div>
                   <div class="icons">
                     <img src="img/Wedding.svg" alt="Bröllopsikon">
@@ -134,12 +134,12 @@
                     <p><span>six</span> tattoos</p>
                   </div>
                   <div class="icons">
-                    <img src="img/Love.svg" alt="Ikon tillsammans">
-                    <p><span>ten</span> years together</p>
-                  </div>
-                  <div class="icons">
                     <img src="img/Degrees.svg" alt="Examina ikon">
                     <p><span>three</span> degrees</p>
+                  </div>
+                  <div class="icons">
+                    <img src="img/Work.svg" alt="Jobb-ikon">
+                    <p><span>nine</span> workplaces</p>
                   </div>
                   <div class="icons">
                     <img src="img/Car.svg" alt="Bilikon">
@@ -246,9 +246,7 @@
         <h5>50th year</h5>
         <h4>2058</h4>
       </div>
-      <div class="future-img">
         <img id="big" src="img/2058-2.jpg" alt="Elin och Micke som gamla">
-      </div>
     </div>
     <script src="scripts/main.js"></script>
   </body>
