Progress bar fix

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <body>
     <div class="hero">
-      <h1 class="hero-title">ten years in recap</h1>
+      <h1 class="hero-title">Tio år tillsammans</h1>
       <img class="hero-img" src="img/em-184.jpg" alt="Micke holdning Elins weddingdress">
     </div>
 
@@ -24,7 +24,7 @@
     <!-- 2008 -->
         <div class="year">
           <div class="year-text">
-            <h3>the start</h3>
+            <h3>Början</h3>
             <h2>2008</h2>
           </div>
           <div class="year-img">
@@ -39,7 +39,7 @@
     <!-- 2009 -->
           <div class="year">
               <div class="year-text">
-                <h3>1st year</h3>
+                <h3>Första året</h3>
                 <h2>2009</h2>
               </div>
               <div class="year-img">
@@ -54,7 +54,7 @@
       <!-- 2010 -->
             <div class="year">
                 <div class="year-text">
-                  <h3>2nd year</h3>
+                  <h3>Andra året</h3>
                   <h2>2010</h2>
                 </div>
                 <div class="year-img">
@@ -70,7 +70,7 @@
       <!-- 2011 -->
             <div class="year">
                 <div class="year-text">
-                  <h3>3rd year</h3>
+                  <h3>tredje året</h3>
                   <h2>2011</h2>
                 </div>
                 <div class="year-img">
@@ -84,7 +84,7 @@
       <!-- 2012 -->
             <div class="year">
                 <div class="year-text">
-                  <h3>4th year</h3>
+                  <h3>Fjärde året</h3>
                   <h2>2012</h2>
                 </div>
                 <div class="year-img">
@@ -97,7 +97,7 @@
       <!-- 2013 -->
             <div class="year">
                 <div class="year-text">
-                  <h3>5th year</h3>
+                  <h3>femte året</h3>
                   <h2>2013</h2>
                 </div>
                 <div class="year-img">
@@ -114,47 +114,47 @@
       <!-- ikoner -->
           <div class="numbers">
                   <div class="icon-title">
-                    <h3>ten years in</h3>
-                    <h2>numbers</h2>
+                    <h3>Tio år i</h3>
+                    <h2>siffror</h2>
                   </div>
                   <div class="icons">
                     <img src="img/Love.svg" alt="Ikon tillsammans">
-                    <p><span>ten</span> years of love</p>
+                    <p><span>tio</span> år tillsammans</p>
                   </div>
                   <div class="icons">
                     <img src="img/Wedding.svg" alt="Bröllopsikon">
-                      <p><span>one</span> wedding</p>
+                      <p><span>Ett</span> bröllop</p>
                   </div>
                   <div class="icons">
                     <img src="img/Travel.svg" alt="reseikon">
-                    <p><span>ten</span> countries visited</p>
+                    <p><span>tio</span> besökta länder</p>
                   </div>
                   <div class="icons">
                     <img src="img/Tattoo.svg" alt="">
-                    <p><span>six</span> tattoos</p>
+                    <p><span>sex</span> tatueringar</p>
                   </div>
                   <div class="icons">
                     <img src="img/Degrees.svg" alt="Examina ikon">
-                    <p><span>three</span> degrees</p>
+                    <p><span>tre</span> examen</p>
                   </div>
                   <div class="icons">
                     <img src="img/Work.svg" alt="Jobb-ikon">
-                    <p><span>nine</span> workplaces</p>
+                    <p><span>Nio</span> arbetsplatser</p>
                   </div>
                   <div class="icons">
                     <img src="img/Car.svg" alt="Bilikon">
-                    <p><span>four</span> cars</p>
+                    <p><span>fyra</span> bilar</p>
                   </div>
                   <div class="icons">
                     <img src="img/Apartment.svg" alt="lägenhetsikon">
-                    <p><span>three</span> apartments</p>
+                    <p><span>tre</span> lägenheter</p>
                   </div>
                 </div>
 
       <!-- 2014 -->
             <div class="year">
                 <div class="year-text">
-                  <h3>6th year</h3>
+                  <h3>Sjätte året</h3>
                   <h2>2014</h2>
                 </div>
                   <div class="year-img">
@@ -172,7 +172,7 @@
       <!-- 2015 -->
             <div class="year">
                 <div class="year-text">
-                  <h3>7th year</h3>
+                  <h3>Sjunde året</h3>
                   <h2>2015</h2>
                 </div>
                   <div class="year-img">
@@ -190,7 +190,7 @@
     <!-- 2016 -->
         <div class="year">
             <div class="year-text">
-              <h3>8th year</h3>
+              <h3>åttonde året</h3>
               <h2>2016</h2>
             </div>
             <div class="year-img">
@@ -210,7 +210,7 @@
         <!-- 2017 -->
             <div class="year">
                 <div class="year-text">
-                  <h3>9th year</h3>
+                  <h3>nionde året</h3>
                   <h2>2017</h2>
                 </div>
                 <div class="year-img">
@@ -228,7 +228,7 @@
     <!-- 2018 -->
       <div class="year">
           <div class="year-text">
-            <h3>10th year</h3>
+            <h3>tionde året</h3>
             <h2>2018</h2>
           </div>
           <div class="year-img">
@@ -243,13 +243,13 @@
     <!-- 2058 -->
     <div class="future">
       <div class="future-text">
-        <h5>50th year</h5>
+        <h5>Femtionde året</h5>
         <h4>2058</h4>
       </div>
         <img id="big" src="img/2058-2.jpg" alt="Elin och Micke som gamla">
     </div>
 
     <script src="scripts/main.js"></script>
-    
+
   </body>
 </html>
