--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <link rel="stylesheet" href="./styles.css" type="text/css">
     <link rel="stylesheet" href="./normalize.css" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Oswald:400,500,700" rel="stylesheet">
-    <link rel="shortcut icon" type="image/png" href="./favicon.png"/>
+    <link rel="shortcut icon" type="image/png" href="./Favicon.png"/>
   </head>
 
   <body>
     <div class="hero">
       <h1 class="hero-title">Tio år tillsammans</h1>
-      <img class="hero-img" src="img/em-184.jpg" alt="Micke holdning Elins weddingdress">
+      <img class="hero-img" src="img/em-184.jpg" alt="Micke bär Elins klänning">
     </div>
 
     <div class="header">
