--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang=“sv“>
 
   <head>
-    <meta name=“viewport” content=“width=device-width, initial-scale=1">
-    <title>10 years in recap</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Tio år tillsammans</title>
     <meta charset="UTF-8">
     <meta name="description" content="10 years recap with Elin & Micke">
     <link rel="stylesheet" href="./styles.css" type="text/css">
